update booking api